--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "restaurent-front-end",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://<ashaneo>.github.io/<restaurent-front-end>",
+  "homepage": "https://ashaneo.github.io/restaurent-front-end",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
